--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-vault",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://joanithagomez.github.io/projects/vault/",
   "dependencies": {
     "copy-to-clipboard": "^3.0.8",
     "crypto-js": "^3.1.2",
@@ -12,8 +13,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
