--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "copy-to-clipboard": "^3.0.8",
     "crypto-js": "^3.1.2",
+    "hoek": "^5.0.3",
     "react": "^15.6.2",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^15.6.1",
