--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-vault",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://joanithagomez.github.io/projects/vault/",
+  "homepage": "https://joanithagomez.github.io/Vault-App/",
   "dependencies": {
     "copy-to-clipboard": "^3.0.8",
     "crypto-js": "^3.1.2",
